# feature-draft

./: Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: LGBMClassifier_example.ipynb  LightGBM_example.ipynb  XGBoost_example.ipynb
feature_draft/: __init__.py  api.py  cross_val.py  estimator.py  feature_scouter.py
feature_draft/configs/: metrics_config.py
tests/: test_api.py  test_cross_val.py  test_estimators.py  test_feature_scouter.py
