[tool.poetry]
name = "feature-draft"
version = "0.1.0"
description = "Feature Selection Algorithm"
authors = ["Ned Webster <ned.webster@simplybusiness.co.uk>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
xgboost = "^1.6.1"
lightgbm = "^3.3.2"
sigfig = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-mock = "^3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
